# SAIL_RACK

./: .gitignore  .replit  BACKEND_IMPLEMENTATION_GUIDE.md  BACKEND_SUMMARY.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_STATUS.md  README.md  README_BACKEND.md  check_env.py  drizzle.config.ts  dump.rdb  index.html  jsconfig.json  package.json  postcss.config.cjs  pyproject.toml  replit.md  requirements.txt  tailwind.config.cjs  test_db.py  test_models.py  vite.config.mjs
api/: auth.py  celery_app.py  database.py  main.py  ml_models.py  models.py  optimizer.py  schemas.py  tasks.py
attached_assets/: Pasted-Hello-please-build-the-complete-backend-engine-for-a-pre-existing-React-frontend-of-a-Decision-Supp-1759828173940_1759828173944.txt
python_service/: main.py
server/: index.js  seed.js
shared/: schema.js
src/: Routes.jsx
src/components/: AppIcon.jsx
src/components/ui/: Breadcrumb.jsx  Header.jsx
src/lib/: api.js  supabase.js.backup
src/pages/analytics/: index.jsx
src/pages/analytics/components/: CostTrendChart.jsx  DeliveryAnalysisChart.jsx  FilterPanel.jsx  MetricCard.jsx  PerformanceChart.jsx  (+1 more)
src/pages/formation-plan/: index.jsx
src/pages/landing/: index.jsx
src/pages/login/: index.jsx
src/pages/main-dashboard/: index.jsx
src/pages/map-view/: index.jsx
src/pages/timeline-view/: index.jsx
src/styles/: index.css  tailwind.css
supabase/migrations/: 001_phase1_core_tables.sql  002_phase2_formation_tables.sql  003_phase3_tracking_tables.sql  004_phase4_analytics_tables.sql  005_phase5_notifications_table.sql  006_seed_sample_data.sql
(+27 files in other folders)
